--- a/bean-scene/app/app.css
+++ b/bean-scene/app/app.css
@@ -1,7 +1,19 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+@import 'tailwindcss';
+@plugin "daisyui";
 
 @theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-sans:
+    'Inter', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+
+
+.red{
+  color: rgb(240, 51, 40);
+}
+
+.yellow{
+  color: rgb(255, 158, 12);
+}
